tests/cases/compiler-development/artifact/errors/diagnostic-c-header-large-array-by-value.diagnostic
diagnostic error code=A0001 family=abi message="C header emission for by-value parameter [i64, 3] is limited to direct aggregate ABI values up to 16 bytes and 8-byte alignment; use ptr [i64, 3]" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/ffi/errors/c-header-large-array-by-value.ari" display="tests/cases/ffi/errors/c-header-large-array-by-value.ari" bytes=103
  Label index=0 role=primary source_id=0 source="tests/cases/ffi/errors/c-header-large-array-by-value.ari" line=2 column=8 end_line=2 end_column=23 byte_start=38 byte_end=53 message=""
  Snippet label=0 text="  --> tests/cases/ffi/errors/c-header-large-array-by-value.ari:2:8\n   |\n 2 | pub fn take_wide_array(values: [i64, 3]) -> i64 {\n   |        ^^^^^^^^^^^^^^^"
